# Personal_Learning_Agent

./: .gitignore  AGENT.md  CLAUDE.md  CODEX.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  stage37_analysis1_retrieval_baseline.txt  stage38a_analysis1_retrieval_filtered.txt  stage38b_analysis1_filtered_retrieval_baseline.txt  stage39_analysis1_chunk_optimized_baseline.txt
backend/alembic/: env.py
backend/app/: main.py
backend/deployment/: nginx-sse.example.conf
backend/evals/: README.md  STAGE62_FINDINGS.md  adaptive_graph.jsonl  legacy_pdf_retrieval.jsonl
backend/scripts/: __init__.py  ask_book.py  benchmark_agent_latency.py  benchmark_agent_streaming.py  benchmark_hnsw_retrieval.py  benchmark_real_providers.py  eval_retrieval.py  evaluate_adaptive_graph.py  evaluate_heldout_research.py  evaluate_pdf_rag.py  evaluate_stage62.py  explain_vector_search.sql  index_pdf.py  retrieval_eval_queries.json  search_book.py  soak_agent_sse.py  verify_sse_delivery.py
backend/tests/: conftest.py  pdf_fixtures.py  test_academic_mcp.py  test_adaptive_graph_evaluation.py  test_adaptive_research_graph.py  test_agent_chat_graph.py  test_agent_memory_architecture.py  test_agent_streaming.py  test_citations.py  test_database_config.py  test_dual_agent_services.py  test_embeddings.py  test_english_source_text.py  test_env_example.py  test_health.py  test_heldout_evaluation.py  test_ingestion.py  test_latency_benchmark.py  test_latency_observability.py  test_learning_events.py  test_legacy_pdf_ingestion.py  test_models.py  (+47 more)
(+212 files in other folders)
