[project]
name = "personal-learning-agent-backend"
version = "0.1.0"
description = "FastAPI and LangGraph backend for Personal Learning Agent"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic",
    "anyio",
    "fastapi",
    "httpx",
    "langgraph",
    "langgraph-checkpoint-postgres",
    "mcp>=1.27,<2",
    "pgvector",
    "psycopg[binary,pool]",
    "pydantic",
    "pydantic-settings",
    "pymupdf>=1.24,<2",
    "pypdf",
    "python-dotenv",
    "sqlalchemy",
    "starlette",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pip-audit",
    "pytest",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff.format]
# Applied Alembic revisions are immutable deployment artifacts. Keep them in
# lint and migration-chain validation, but do not rewrite them for formatting.
exclude = ["alembic/versions/*.py"]

[tool.ruff.lint.per-file-ignores]
# This applied revision retains an import used to document the historical
# pgvector type transition. Do not rewrite deployed migration artifacts.
"alembic/versions/7c1a2b3d4e5f_set_document_chunk_embedding_dimension_1024.py" = ["F401"]
