[package]
name = "personal-learning-agent"
version = "0.1.0"
description = "Personal Learning Agent desktop shell"
authors = ["Personal Learning Agent"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
